thinking about deployment / changed my face / added meta tags and titles

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Anurag Hazra | Passionate Web Designer. Creative and unique web designer from india who loves javascript and modern web technologies">
+    <meta name="keywords" content="Anurag hazra, web designer, web development, portfolio, inspiration, javascript, github, creative"/>
+    <meta name="author" content="Anurag Hazra" />
     <link href="https://fonts.googleapis.com/css?family=Lobster|Muli" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 
@@ -25,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Anurag Hazra | Creative Web Designer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
