added intersection-observer and other polyfills / fixing IOS bug

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default%2CObject.entries%2CObject.keys%2CObject.values"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
