added social meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,27 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Anurag Hazra | Creative Web Designer">
     <meta name="description" content="Anurag Hazra | Passionate Web Designer. Creative and unique web designer from india who loves javascript and modern web technologies">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://anuraghazra.github.io/">
+    <meta property="og:title" content="Anurag Hazra | Creative Web Designer">
+    <meta property="og:description" content="Anurag Hazra | Passionate Web Designer. Creative and unique web designer from india who loves javascript and modern web technologies">
+    <meta property="og:image" content="https://anuraghazra.github.io/static/img/social-cover.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://anuraghazra.github.io/">
+    <meta property="twitter:title" content="Anurag Hazra | Creative Web Designer">
+    <meta property="twitter:description" content="Anurag Hazra | Passionate Web Designer. Creative and unique web designer from india who loves javascript and modern web technologies">
+    <meta property="twitter:image" content="https://anuraghazra.github.io/static/img/social-cover.png">
+
+
     <meta name="keywords" content="Anurag hazra, web designer, web development, portfolio, inspiration, javascript, github, creative"/>
     <meta name="author" content="Anurag Hazra" />
     <link href="https://fonts.googleapis.com/css?family=Lobster|Muli" rel="stylesheet">
